--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
-:root{
-    --Moderate-violet: hsl(263, 55%, 52%);
---Very-dark-grayish-blue: hsl(217, 19%, 35%);
---Very-dark-blackish-blue: hsl(219, 29%, 14%);
---White: hsl(0, 0%, 100%);
+@import url("https://fonts.googleapis.com/css2?family=Barlow+Semi+Condensed:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
 
---Light-gray: hsl(0, 0%, 81%);
---Light-grayish-blue: hsl(210, 46%, 95%);
+:root {
+  --Moderate-violet: hsl(263, 55%, 52%);
+  --Very-dark-grayish-blue: hsl(217, 19%, 35%);
+  --Very-dark-blackish-blue: hsl(219, 29%, 14%);
+  --White: hsl(0, 0%, 100%);
 
+  --Light-gray: hsl(0, 0%, 81%);
+  --Light-grayish-blue: hsl(210, 46%, 95%);
 }
 
 *,
@@ -23,17 +24,76 @@ body {
   height: 100vh;
   width: 100%;
   background-color: var(--Very-dark-grayish-blue);
+  font-family: "Barlow Semi Condensed", serif;
 }
 
-.boxes{
-    display: flex;
-    justify-content: start;
-    align-items: center;
-    margin: 15rem;
+.boxes {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 10rem;
+  margin-left: -35rem;
 }
 
-.box-1{
-    width: 750px;
-    height: 350px;
-    background-color: var(--Moderate-violet);
+.box-1 {
+  width: 700px;
+  height: 350px;
+  background-color: var(--Moderate-violet);
+  border-radius: 10px;
+}
+.image-icon {
+  display: flex;
+  gap: 15px;
+  margin: 1.5rem;
+}
+
+.image-daniel {
+  border-radius: 50px;
+  border: 2px solid var(--Light-grayish-blue);
+  width: 3rem;
+}
+
+.daniel-txt {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.daniel-txt p {
+  color: var(--Light-gray);
+}
+
+.daniel-txt span {
+  color: var(--Light-grayish-blue);
+  opacity: 50%;
+}
+
+h3 {
+  position:absolute;
+  margin: 1.5rem;
+  color: var(--White);
+  width: 620px;
+  font-weight: 600;
+  font-size: 1.5rem;
+  z-index: 2;
+  margin-top: -5px;
+}
+
+.quotation-img {
+  position: relative;
+  top: -85px;
+  margin-left: 30rem;
+  z-index: 1;
+  width: 115px;
+}
+
+.emt-text{
+  color: var(--Light-gray);
+  margin-left: 1.5rem;
+  width: 670px;
+  font-weight: 600;
 }
