--- a/style.css
+++ b/style.css
@@ -40,6 +40,7 @@ body {
   height: 350px;
   background-color: var(--Moderate-violet);
   border-radius: 10px;
+  margin-right: -30rem;
 }
 .image-icon {
   display: flex;
@@ -48,6 +49,12 @@ body {
 }
 
 .image-daniel {
+  border-radius: 50px;
+  border: 2px solid var(--Light-grayish-blue);
+  width: 3rem;
+}
+
+.image-jonathan {
   border-radius: 50px;
   border: 2px solid var(--Light-grayish-blue);
   width: 3rem;
@@ -73,7 +80,7 @@ body {
 }
 
 h3 {
-  position:absolute;
+  position: absolute;
   margin: 1.5rem;
   color: var(--White);
   width: 620px;
@@ -91,9 +98,150 @@ h3 {
   width: 115px;
 }
 
-.emt-text{
+.emt-text {
   color: var(--Light-gray);
   margin-left: 1.5rem;
   width: 670px;
   font-weight: 600;
+}
+
+.box-2 {
+  width: 300px;
+  height: 350px;
+  background-color: var(--Moderate-violet);
+  border-radius: 10px;
+  margin-left: 500px;
+}
+
+.jonathan-txt {
+  display: flex;
+  align-items: start;
+  flex-direction: column;
+  justify-content: center;
+  gap: 2px;
+  font-size: 15px;
+  font-weight: 500;
+}
+
+.jonathan-txt p {
+  color: var(--Light-gray);
+}
+
+.jonathan-txt span {
+  color: var(--Light-grayish-blue);
+  opacity: 50%;
+}
+
+.jonathan-h3 {
+  position: absolute;
+  margin: 1.5rem;
+  color: var(--White);
+  width: 250px;
+  font-weight: 600;
+  font-size: 1.5rem;
+  z-index: 2;
+  margin-top: -5px;
+}
+
+.emt-text-jonathan {
+  color: var(--Light-gray);
+  margin-left: 1.5rem;
+  width: 250px;
+  font-weight: 600;
+  position: relative;
+  top: 110px;
+}
+
+@media screen and (max-width: 650px) {
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .boxes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    flex-direction: column;
+  }
+  .box-1 {
+    width: 450px;
+    height: 500px;
+    margin: 0 auto;
+  }
+  .box-2 {
+    width: 450px;
+    height: 290px;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+  h3 {
+    font-size: 1.5rem;
+    width: 400px;
+  }
+  .jonathan-h3 {
+    width: 400px;
+  }
+  .quotation-img {
+    margin-left: 290px;
+  }
+  .emt-text {
+    width: 270px;
+    margin-top: 20px;
+  }
+  .emt-text-jonathan {
+    position: relative;
+    width: 270px;
+    top: 70px;
+    width: 390px;
+  }
+}
+
+@media screen and (max-width: 1650px) {
+  body {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 10px;
+  }
+  .boxes {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+  margin: 0 auto;
+    flex-direction: column;
+  }
+  .box-1 {
+    width: 450px;
+    height: 500px;
+    margin: 0 auto;
+  }
+  .box-2 {
+    width: 450px;
+    height: 290px;
+    margin: 0 auto;
+    margin-top: 20px;
+  }
+  h3 {
+    font-size: 1.5rem;
+    width: 400px;
+  }
+  .jonathan-h3 {
+    width: 400px;
+  }
+  .quotation-img {
+    margin-left: 290px;
+  }
+  .emt-text {
+    width: 270px;
+    margin-top: 20px;
+  }
+  .emt-text-jonathan {
+    position: relative;
+    width: 270px;
+    top: 70px;
+    width: 390px;
+  }
 }
